--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Zkontrolujte si tyto složky, kam jsme vám možná zapadli.</p>
             <div class="warning-spam">
                 <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
-                <p class="first-warning">Chcete mít přehled, na čem pracuje ministr <h3>Ivan Bartoš</h3>? Co třeba chystá s digitalizací? </p>
+                <p class="first-warning">Chcete mít přehled, na čem pracuje ministr <h3>Ivan Bartoš?</h3> Co třeba chystá s digitalizací? </p>
             </div>
             <p class="warning-solution">Sledujte jej na Facebooku >>> <a href="https://www.facebook.com/PiratIvanBartos">Pirát Ivan Bartoš</a>, případně zůstaňte v obraze 
                 díky FB Pirátské strany! >>> <a href="https://www.facebook.com/ceska.piratska.strana">Zde!</a></p>
