--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 Zkontrolujte si tyto složky, kam jsme vám možná zapadli.</p>
             <div class="warning-spam">
                 <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
-                <p class="first-warning">Chcete mít přehled, na čem pracuje ministr <h3>Ivan Bartoš?</h3> Co třeba chystá s digitalizací? </p>
+                <p class="first-warning">Chcete mít přehled, na čem pracuje ministr <a href="https://www.facebook.com/PiratIvanBartos">Ivan Bartoš?</a> Co třeba chystá s digitalizací? </p>
             </div>
-            <p class="warning-solution">Sledujte jej na Facebooku >>> <a href="https://www.facebook.com/PiratIvanBartos">Pirát Ivan Bartoš</a>, případně zůstaňte v obraze 
+            <p class="warning-solution">Sledujte jej na Facebooku, případně zůstaňte v obraze 
                 díky FB Pirátské strany! >>> <a href="https://www.facebook.com/ceska.piratska.strana">Zde!</a></p>
             <div class="warning-spam">
                 <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
@@ -84,8 +84,7 @@
                 <button class="btn sharing"><a href="">Sdílejte</a></button>
             </div>
             <p class="onboarding-final">Sdílejte, že nás podporujete, protože tak rozšíříme informaci o tomto způsobu podpory a oslovíme více lidí, kteří chtějí pomoci s dosažením společných cílů.</p>
-            <h1 class="onboarding-bye">Děkujeme!</h1>
-            <h2 class="onboarding-pirates">Vaše Česká pirátská strana</h2>
+            <h1 class="onboarding-bye">Díky! Vaši Piráti</h1>
         </section>
     </div>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
