Update index.html adding attribute

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <h1 class="onboarding-bye">Díky! Vaši Piráti</h1>
         </section>
     </div>
+    <a style="text-decoration: none, font-size: 10px, margin-top: 2rem" href="https://www.flaticon.com/free-icons/">Icons created by Freepik - Flaticon</a>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
