--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h1 class="onboarding-bye">Díky! Vaši Piráti</h1>
         </section>
     </div>
-    <div class="attribute"><a href="https://www.flaticon.com/free-icons/">Icons created by Freepik - Flaticon</a></div>
+    <div class="attribute"><a href="https://www.flaticon.com/icons/">Icons created by Freepik - Flaticon</a></div>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
