Updating index.html

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <h2 class="campaigns-title-text">Pracujeme na vícero projektech zároveň.</h2>
             </div> 
             <div class="campaigns-projects">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="first-project">Zajímá vás činnost některých resortních týmů? >>> <a href="https://dary.pirati.cz/resortni-tymy/">Zde mají své kampaně!</a></p>
             </div>
             <div class="campaigns-projects">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="second-project">Nebo si znovu prohlédněte všechny kampaně, které právě běží >>> <a href="https://dary.pirati.cz/#strana">Tady!</a></p>
             </div>
             <div class="campaigns-newsletter">
@@ -50,20 +50,20 @@
                 <h2 class="warning-title-text">Upozornění:</h2>
             </div> 
             <div class="warning-spam">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="first-warning">Nechodí vám od nás emaily? Hledáte newsletter?</p>
             </div>
             <p class="warning-solution"><strong>Seznam</strong> a <strong> Email.cz </strong> někdy naše emaily třídí rovnou do 
                 Hromadných, <strong> Gmail.com </strong> pak třeba rovnou do Spamu. 
                 Zkontrolujte si tyto složky, kam jsme vám možná zapadli.</p>
             <div class="warning-spam">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="first-warning">Chcete mít přehled, na čem pracuje ministr <a href="https://www.facebook.com/PiratIvanBartos">Ivan Bartoš?</a> Co třeba chystá s digitalizací? </p>
             </div>
             <p class="warning-solution">Sledujte jej na Facebooku, případně zůstaňte v obraze 
                 díky FB Pirátské strany! >>> <a href="https://www.facebook.com/ceska.piratska.strana">Zde!</a></p>
             <div class="warning-spam">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="first-warning">Pilně pracuje také náš ministr pro legislativu <a href="https://twitter.com/michal_salomoun"> Michal Šalomoun</a> a <a href="https://twitter.com/JanLipavsky">Jan Lipavský</a> pravidelně 
                     informuje nejen o svých cestách.</p>
             </div>
@@ -76,7 +76,7 @@
                 <h2 class="onboarding-title-text">Jsme rádi, že vám záleží na budoucnosti Česka a na našich tématech.</h2>
             </div>
             <div class="onboarding-text">
-                <box-icon style="background-color: black; border-radius: 50%;" color="yellow" name='chevron-right'></box-icon>
+                <box-icon style="background-color: black; border-radius: 50%;" color="#f9ce06" name='chevron-right'></box-icon>
                 <p class="first-onboarding">Chcete se s námi podílet na jejich prosazování? Přidejte se k nám!</p>
             </div>
             <div class="buttons">
